--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
     box-sizing: border-box;
 }
 :root{
-    --tenne-tawny: #d65108;
-    --tenne-tawny-dark: #b54507;
+    --tenne-tawny:gray;
+    --tenne-tawny-dark: gray;
 }
 body{
     font-weight: 300;
@@ -291,7 +291,7 @@ body{
 @media screen and (min-width: 768px){
     #meal{
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(3, 1fr);
         gap: 2rem;
     }
     .meal-item{
@@ -304,6 +304,6 @@ body{
 
 @media screen and (min-width: 992px){
     #meal{
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(5, 1fr);
     }
 }
